2011-06-01  Sam Steingold  <sds@gnu.org>

	finish the 2011-05-13 possible_symlink patch
	* pathname.d (my_readlink) [UNIX_LINUX]: do not handle /proc specially
	(stat_for_search) [UNIX_LINUX]: ditto

2011-06-01  Sam Steingold  <sds@gnu.org>

	avoid errors on weird pathnames like ~/.gvfs under gnome
	* pathname.d (get_path_info): accept tolerantp
	(assure_dir_exists): pass tolerantp to get_path_info
	(namestring_kind_t): add NAMESTRING_BAD for existing objects
        for which no information could be obtained
	(classify_namestring): return NAMESTRING_BAD instead of signaling
	(PROBE-PATHNAME): signal the error here
	(directory_search_direntry_ok): never signal any errors,
	just return false
	(directory_search_scandir): call OS_file_error instead of
	error_file_not_exists after a failed directory_search_direntry_ok
	when if_none=DIR_IF_NONE_ERROR
	Reported by Don Cohen http://article.gmane.org/gmane.lisp.clisp.general:13778

2011-05-24  Sam Steingold  <sds@gnu.org>

	* _clisp.c (main) [WIN32_NATIVE]: use FormatMessage()
	instead of strerror() for GetLastError()
	Reported by Bruno Haible

2011-05-24  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (GNULIB_CORE): import mkfifo mknod mkstemp
	mkdtemp getloadavg
	* modules/syscalls/calls.c (MKSTEMP, MKDTEMP, LOADAVG, MKNOD):
	define uniformly on all platforms
	* modules/syscalls/posix.lisp (mknod): export on all platforms

2011-05-20  Sam Steingold  <sds@gnu.org>

	* spvw_language.d (clgettext) [!GNU_GETTEXT]: define for CLSTEXT

2011-05-19  Sam Steingold  <sds@gnu.org>

	* subrkw.d: remove
	* spvw.d (init_subr_tab_2): use subr with LISPFUN_H instead of subrkw
	* subr.d (LISPFUN_H): fix
	* makemake.in (OTHER_INCLUDES): remove subrkw
	* po/Makefile.devel (DSOURCES): ditto
	* check-lispfun.lisp (check-lisp-defs): do not look at subrkw.d

2011-05-19  Sam Steingold  <sds@gnu.org>

	* zthread.d (EXEMPTION-WAIT): fix the key count in the definition
	to match the (correct) declaration in subr.d
