@@ -824,7 +824,7 @@ LISPFUNN(absolute_pathname,1)
 LISPFUNNR(namestring,1)
 LISPFUNNS(truename,1)
 LISPFUNNS(probe_file,1)
-LISPFUNNR(probe_pathname,1)
+LISPFUNNS(probe_pathname,1)
 LISPFUNNS(probe_directory,1)
 LISPFUNN(delete_file,1)
 LISPFUN(rename_file,seclass_default,2,0,norest,key,1,(kw(if_exists)))
